Adjust font sizes and update quiz text

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         }
 
         h1 {
-            font-size: clamp(24px, 4vh, 48px);
+            font-size: clamp(20px, 4vh, 48px);
             color: var(--main-yellow);
             margin: 0;
             text-shadow: 3px 3px 0 #d35400;
@@ -86,7 +86,7 @@
         }
 
         #question-text {
-            font-size: clamp(24px, 6vh, 80px);
+            font-size: clamp(20px, 5.5vh, 75px);
             font-weight: 900;
             color: #2c3e50;
             line-height: 1.3;
@@ -95,7 +95,7 @@
 
         #answer-text {
             position: absolute;
-            font-size: clamp(40px, 12vh, 150px);
+            font-size: clamp(30px, 10vh, 130px);
             font-weight: 900;
             color: #e74c3c;
             background: #ffff00;
@@ -118,8 +118,8 @@
 
         .btn {
             height: 10vh;
-            padding: 0 5vw;
-            font-size: clamp(18px, 4vh, 40px);
+            padding: 0 4vw;
+            font-size: clamp(16px, 3.5vh, 36px);
             font-weight: bold;
             border: none;
             border-radius: 50px;
@@ -155,7 +155,7 @@
 
     <div class="slot-machine">
         <div class="display-window">
-            <div id="question-text">準備はいいかな？<br>スタートしてね！</div>
+            <div id="question-text">最後を飾るクイズ大会！<br>準備はいいかな？</div>
             <div id="answer-text">？？？</div>
         </div>
     </div>
@@ -177,21 +177,33 @@
         { q: "体重が60キロに迫っているのは誰？", a: "ルイ" },
         { q: "練習試合中、コーチャーで立ったまま居眠りしてしまったのは誰？", a: "ルイ" },
         { q: "保冷バッグの中にミニゼリー30個詰めてるのは誰？", a: "ルイ" },
-        { q: "パンイチでカリスマックスを踊るのは誰？", a: "シュンゴ" },
-        { q: "6年間で一番体型が別人級に変わったのは誰？", a: "シュンゴ" },
+        { q: "トスバッティングの流し打ちで稲見さんとイエの目を負傷させた流し打ち名人は誰？", a: "ルイ" },
+        { q: "パンイチでカリスマックスを踊るのは誰？", a: "しゅんご" },
+        { q: "6年間で一番体型が別人級に変わったのは誰？", a: "しゅんご" },
+        { q: "お別れ大会で一塁リードから自分の足につまずいてヘッスラしたのは誰？", a: "しゅんご" },
+        { q: "スラパンをピカチューのパンツだと思って最後まで履かなかったのは誰？", a: "しゅんご" },
+        { q: "練習後「今日一杯やる？」という選手は誰？", a: "しゅんご" },
         { q: "大事な公式戦が続いている最中、電柱にぶつかって大怪我したのは誰？", a: "ユウセイ" },
+        { q: "昨年、電柱に真正面からぶつかり顔面血だらけで週末の試合が危ぶまれたのは誰？", a: "ユウセイ" },
+        { q: "オスグッド、薬指骨折、打撲の三冠怪我王は誰？", a: "ユウセイ" },
         { q: "イケメンなのに、いつも荷物がごちゃごちゃなのは誰？", a: "ユキト" },
         { q: "「ゆうせいと野球がしたい」と母に言って入部させたのは誰？", a: "ユキト" },
         { q: "5年生の夏休み、台風で岐阜まで4時間かかったのは誰？", a: "ユキト" },
+        { q: "脇がかぶれて試合中にベビーパウダーを買いに行かせた選手は誰？", a: "ユキト" },
         { q: "前日にレバーを食べ過ぎて鼻血を出しながら守っていたのは誰？", a: "そうま" },
         { q: "試合後、草むらでお漏らししていたのは誰？", a: "はると" },
         { q: "ベースに顔面から突っ込む率が高いのは誰？", a: "はると" },
         { q: "フライを捕った直後、顔から地面に突っ込んだのは誰？", a: "じえい" },
         { q: "フライを捕った後、必ずグローブのボールを確かめるのは誰？", a: "じえい" },
+        { q: "「ハイ！」が「ヘイ！」になってしまう選手は誰？", a: "じえい" },
         { q: "学校生活では野球と違ってめちゃくちゃ騒がしいのは誰？", a: "マル" },
         { q: "踊るとキレッキレなのは誰？", a: "リョウスケ" },
+        { q: "股ずれが1番多かった選手は誰？", a: "リョウスケ" },
+        { q: "松居カーの後部座席でリクライニングをガン倒しする社長のような選手は誰？", a: "リョウスケ" },
         { q: "居ないと思ったら、いつもトイレに行っているのは誰？", a: "タケル" },
         { q: "「無死満塁男」と呼ばれたのは誰？", a: "タケル" },
+        { q: "夏の船橋遠征、三塁へ進塁した瞬間にゲロを吐いたのは誰？", a: "タケル" },
+        { q: "伊江カーでうんこを漏らしそうになり運転手を慌てさせたのは誰？", a: "タケル" },
         { q: "23区大会で見事なバックホームを見せた強肩は誰？", a: "サトシ" },
         { q: "この1年間で肌が透き通るほど白くなったのは誰？", a: "サトシ" },
         { q: "1年生の時、ルール無視の猛ダッシュをして号泣したのは誰？", a: "テル" },
@@ -204,12 +216,16 @@
         { q: "めっちゃ怖いけど怒った次の瞬間にはもう笑っているのは誰？", a: "キヨ" },
         { q: "怒りのあまりバットを投げたのは誰？", a: "キヨ" },
         { q: "夫婦でシミ取りのピーリングに行ってるのは誰？", a: "キヨ" },
+        { q: "遠征で一時停止違反をし、警察に捕まったのは誰？", a: "キヨコーチ" },
         { q: "チームのためを思ってファールの誤審をしたのは誰？", a: "オギ" },
         { q: "「暑いので、ぼくを冷やすものありますか？」と言った主審は誰？", a: "イトテツ" },
         { q: "誰がどれだけ誘っても決して飲み会に参加しない父は誰？", a: "白メ" },
         { q: "菓子パンやシュークリームを隠し持っているプーさんは誰？", a: "松居プー" },
         { q: "ファールが直撃し、「妹を見てないバチが当たった」と言われた母は誰？", a: "舞ちゃん" },
-        { q: "チームの雰囲気が悪くなると眉間にシワがよる室井刑事は誰？", a: "竹内父" }
+        { q: "チームの雰囲気が悪くなると眉間にシワがよる室井刑事は誰？", a: "竹内父" },
+        { q: "中央海浜でバリカンで坊主にしたハルト、ユキト、テル以外のもう1人は誰？", a: "イナミン" },
+        { q: "ヤスコのオーバーオール、外している方は右・左どっち？", a: "ヤッコから回答" },
+        { q: "5年生の新人戦、試合前に相手を翻弄させたのは「ラッキーボーイ」か「ワカチコ」どっち？", a: "ワカチコ" }
     ];
 
     let quizPool = [...masterQuizData];
@@ -235,15 +251,14 @@
 
     function startSlot() {
         if (quizPool.length === 0) {
-            if (confirm("全問終了しました！最初からリセットしますか？")) {
+            if (confirm("全問終了しました！リセットして最初から始めますか？")) {
                 quizPool = [...masterQuizData];
                 updateCounter();
-                qElement.innerText = "リセット完了！スタートしてね！";
+                qElement.innerText = "リセット完了！スタートボタンを押してね！";
             }
             return;
         }
 
-        // スロット回転中の音
         soundRoll.currentTime = 0;
         soundRoll.play().catch(() => {}); 
         
@@ -260,8 +275,6 @@
 
     function stopSlot() {
         clearInterval(timer);
-        
-        // 回転音を止めて、停止音（ジャン！）を鳴らす
         soundRoll.pause();
         soundStop.currentTime = 0;
         soundStop.play().catch(() => {});
@@ -272,7 +285,6 @@
     }
 
     function revealAnswer() {
-        // 正解音（ピンポン！）を鳴らす
         soundCorrect.currentTime = 0;
         soundCorrect.play().catch(() => {});
 
@@ -285,7 +297,7 @@
 
         if (quizPool.length === 0) {
             setTimeout(() => {
-                alert("全問クリアです！卒団おめでとう！");
+                alert("全53問、すべて終了です！卒団おめでとうございます！");
             }, 1000);
         }
     }
