Add new quiz question about F監督 and マリコ

--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
         { q: "中央海浜でバリカンで坊主にしたハルト、ユキト、テル以外のもう1人は誰？", a: "イナミン" },
         { q: "ヤスコのオーバーオール、外している方は右・左どっち？", a: "ヤッコから回答" },
         { q: "5年生の新人戦、試合前に相手を翻弄させたのは「ラッキーボーイ」か「ワカチコ」どっち？", a: "ワカチコ" }
+        { q: "3年生の時に、F監督に新人戦の吸い上げで呼ばれ召集されたが、勝ち進んで夏の帰省に試合が被ってしまったため休むと言ったら「もう、ええわ！」と言われた母は誰？", a: "マリコ" }
     ];
 
     let quizPool = [...masterQuizData];
